# atee-core

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  conversation.py  critic.py  memory_agent.py  orchestrator.py  planner.py  tool_agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  health.py  memory.py  voice.py
backend/app/core/: __init__.py  config.py  dependencies.py  logging.py  safety.py
backend/app/emotion/: detector.py  personality.py
backend/app/knowledge/: loader.py  retriever.py
backend/app/llm/: groq_client.py  ollama_client.py  router.py
backend/app/memory/: long_term.py  manager.py  short_term.py  vector_store.py
backend/app/schemas/: chat.py  memory.py
backend/app/tools/: registry.py
backend/app/tools/builtin/: __init__.py  file_ops.py  reminder.py  system.py  web_search.py
backend/app/voice/: stt.py  tts.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/app/: page.tsx
