[project]
name = "atee-core"
version = "0.1.0"
description = "ATEE — AI Companion for Thoughtful Evolution & Emotion (backend)"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
